extauthz/e2e/store.fga.yaml
model: |
  model
    schema 1.1

  type subject

  type resource
    relations
      define access: [ subject with allowed_methods ]

  condition allowed_methods(allowed: list<string>, request_method: string) {
    allowed.exists_one(r, r == request_method) || allowed.exists_one(r, r == "*")
  }

tuples:
  - user: subject:user_123
    relation: access
    object: resource:service_abc
    condition:
      name: allowed_methods
      context:
        allowed: ["GET"]
  - user: subject:user_456
    relation: access
    object: resource:service_xyz
    condition:
      name: allowed_methods
      context:
        allowed: ["*"]

tests:
  - name: user_123 can do only GET to service_abc
    check:
      - user: subject:user_123
        assertions:
          access: true
        object: resource:service_abc
        context:
          request_method: "GET"
      - user: subject:user_123
        assertions:
          access: false
        object: resource:service_abc
        context:
          request_method: "POST"
  - name: user_456 can do only GET to service_xyz
    check:
      - user: subject:user_456
        assertions:
          access: true
        object: resource:service_xyz
        context:
          request_method: "GET"
      - user: subject:user_456
        assertions:
          access: true
        object: resource:service_xyz
        context:
          request_method: "POST"
