extauthz/e2e/tuples.yaml
- user: subject:test_subject
  relation: caller
  object: resource:test_resource
